test/preprocessor/invalid/define.glsl
#define A(
)
#define B(x,
)
#define
C
#define E(,)
#define D(
,
)
#define 1
